# vertel

./: CMakeLists.txt  README.md
include/: vertel.h
include/vertel/: graphic.h  image.h  world.h
src/: graphic.cpp  image.cpp  main.cpp  world.cpp
